# ClockWorks

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  main.cpp
GUI/: CMakeLists.txt  GUI.h  GUI.hpp  GraphicalScene.hpp  main.cpp
include/: Object.hpp  Scene.hpp  Vec.hpp  precision.hpp
tests/: CMakeLists.txt  Scene.cpp  Vec.cpp
